# 2521Ass2

./: BSTree.c  BSTree.h  CMakeLists.txt  Graph.c  README.md  a.out  function.c  function.h  graph.h  inverted.c  inverted.h  pagerank  pagerank.c  pagerank.h  pagerankList.txt  random.c  rankC.txt  scaledFootrule.c  searchIfIdf.c  searchPagerank  searchPagerank.c  searchTfIdf  searchTfIdf.c  test1.txt  test2.txt  url.c  url.h
part1George/: pagerank  pagerank.c  pagerankList.txt  temp.txt
submission/: BSTree.c  Graph.c  function.c  function.h  inverted.c  pagerank.c  searchPagerank.c  searchTfIdf.c
testenv/: BSTree.h  function.h  invertedIndex.txt  scaledFootrule  scaledFootrule.c  searchTfIdf  searchTfIdf.c
